--- a/.github/workflows/run-scripts-man.yml
+++ b/.github/workflows/run-scripts-man.yml
@@ -26,7 +26,7 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
 
-      - uses: r-lib/actions/setup-pandoc@master
+      - uses: r-lib/actions/setup-pandoc@main
 
       - name: Query dependencies
         run: |
