--- a/.github/workflows/run-scripts-man.yml
+++ b/.github/workflows/run-scripts-man.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
 
       - name: install libcurl
-        run: sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt install libcurl4-openssl-dev libssl-dev libharfbuzz-dev libfribidi-dev
         
       - name: Query dependencies
         run: |
