--- a/.github/workflows/run-scripts-man.yml
+++ b/.github/workflows/run-scripts-man.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           install.packages('remotes')
           install.packages('sessioninfo')
+          install.packages('raggs')
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
