--- a/.github/workflows/run-scripts-man.yml
+++ b/.github/workflows/run-scripts-man.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: ubuntu-ubuntu-22.04,   r: 'release'}
+          - {os: ubuntu-22.04,   r: 'release'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
